--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,10 @@
-	home.css
 
+		html {
+			margin: 0;
+			padding: 0;
+		}
   	body {
   	  font-family: 'Arial', sans-serif;
-  	  margin: 0;
-  	  padding: 0;
   	  box-sizing: border-box;
   	  background-color: #002B36;
   	  color: #fff;
@@ -15,12 +16,13 @@
   	  text-align: center;
   	  padding: 20px;
   	}
-
     section {
       text-align: center;
+			background-color: #073642;
+			color: #002B36;
     }
   	.container {
-  	  max-width: 800px;
+  	  /* max-width: 800px; */
   	  margin: 0 auto;
   	  padding: 20px;
   	}
